# even-g2-hermes-bridge

./: .env  .env.example  .gitignore  AGENTS.md  DEVELOPER_NOTES.md  README.md  Taskfile.yml  app.json  docker-compose.yml
.github/workflows/: ci.yml
bridge-server/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test-client.html
bridge-server/src/byoa_bridge/: server.py
glasses-app/: app.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
glasses-app/src/: log.ts  main.ts  protocol.ts  wire.ts
glasses-app/src/lib/: bridge.ts  frames.ts  page-lifecycle.ts  reconnect.ts  session.ts  state.ts
glasses-app/src/proto_gen/: hermes_bridge.ts
glasses-app/tests/: bridge.test.ts  frames.test.ts  page-lifecycle.test.ts  reconnect.test.ts  session-roundtrip.test.ts  session.test.ts  state.test.ts  wire.test.ts
openspec/changes/add-voice-confirmation/: design.md  proposal.md  tasks.md
openspec/changes/add-voice-confirmation/specs/voice-confirmation/: spec.md
openspec/changes/align-glasses-app-best-practices/: README.md  design.md  proposal.md  tasks.md
openspec/changes/align-glasses-app-best-practices/specs/glasses-app-exit-dialog/: spec.md
openspec/changes/archive/2026-07-20-byoa-probe-spike/: design.md  observations.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-byoa-probe-spike/specs/byoa-probe/: spec.md
openspec/changes/archive/2026-07-20-sse-tolerance-spike/: design.md  observations.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-sse-tolerance-spike/specs/sse-tolerance-probe/: spec.md
openspec/changes/archive/2026-07-21-align-glasses-app-best-practices/: tasks.md
openspec/changes/archive/2026-07-21-align-glasses-app-best-practices/specs/glasses-app-bridge-resilience/: spec.md
openspec/changes/archive/2026-07-21-bridge-server-byoa-migration/: proposal.md
openspec/changes/archive/2026-07-21-bridge-server-byoa-migration/specs/request-dedup/: spec.md
openspec/changes/archive/2026-07-21-fix-session-rendering/: README.md  proposal.md
openspec/changes/archive/2026-07-21-fix-session-rendering/specs/glasses-app-session-roundtrip/: spec.md
openspec/changes/archive/2026-07-22-build-even-g2-hermes-platform/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-fix-page-container-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-fix-page-container-lifecycle/specs/glasses-app-page-lifecycle/: spec.md
openspec/changes/archive/2026-07-22-protobuf-wire-protocol/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-protobuf-wire-protocol/specs/protobuf-wire-protocol/: spec.md
openspec/changes/bridge-server-byoa-migration/: design.md  tasks.md
openspec/changes/bridge-server-byoa-migration/specs/byoa-endpoint/: spec.md
openspec/changes/bridge-server-byoa-migration/specs/session-history/: spec.md
openspec/changes/build-even-g2-hermes-platform/: tasks.md
openspec/changes/build-even-g2-hermes-platform/specs/glasses-ws-app/: spec.md
openspec/changes/build-even-g2-hermes-platform/specs/glasses-ws-protocol/: spec.md
openspec/changes/build-even-g2-hermes-platform/specs/hermes-platform-plugin/: spec.md
openspec/changes/build-even-g2-hermes-platform/specs/voice-asr/: spec.md
openspec/changes/fix-session-rendering/: design.md  tasks.md
openspec/changes/fix-session-rendering/specs/plugin-session-hooks/: spec.md
openspec/changes/persist-bridge-credentials/: design.md  proposal.md  tasks.md
openspec/changes/persist-bridge-credentials/specs/glasses-app-page-lifecycle/: spec.md
openspec/changes/protobuf-wire-protocol/: README.md  tasks.md
openspec/changes/protobuf-wire-protocol/specs/connection-debugging/: spec.md
openspec/changes/unify-byoa-endpoint-into-plugin/: design.md  proposal.md  tasks.md
openspec/changes/unify-byoa-endpoint-into-plugin/specs/byoa-https-endpoint/: spec.md
openspec/specs/byoa-endpoint/: spec.md
openspec/specs/connection-debugging/: spec.md
openspec/specs/glasses-app-bridge-resilience/: spec.md
openspec/specs/glasses-app-exit-dialog/: spec.md
openspec/specs/glasses-app-page-lifecycle/: spec.md
openspec/specs/glasses-app-session-roundtrip/: spec.md
openspec/specs/glasses-ws-app/: spec.md
openspec/specs/glasses-ws-protocol/: spec.md
openspec/specs/hermes-platform-plugin/: spec.md
openspec/specs/plugin-session-hooks/: spec.md
openspec/specs/protobuf-wire-protocol/: spec.md
openspec/specs/request-dedup/: spec.md
openspec/specs/session-history/: spec.md
openspec/specs/voice-asr/: spec.md
plugin/: .env.example  README.md  __init__.py  buf.gen.yaml  plugin.yaml  pyproject.toml
plugin/proto/: hermes_bridge.proto
plugin/src/byoa_plugin/: __init__.py  adapter.py  cli.py  config.py  connections.py  debug_client.py  hooks.py  http_endpoints.py  log.py  net.py  protocol.py  protocol_gen.py  qr_setup.py  server.py  setup_flow.py  wire.py
plugin/src/byoa_plugin/asr/: __init__.py  litellm.py  parakeet.py  whisper_fallback.py
plugin/src/byoa_plugin/proto_gen/: hermes_bridge_pb2.py  hermes_bridge_pb2.pyi
plugin/tests/: __init__.py  conftest.py  fake_client.py  test_asr_dispatcher.py  test_byoa_http.py  test_config.py  test_connections.py  test_debug_client.py  test_hello_ok_active.py  test_http_endpoints.py  test_integration_ws.py  test_protocol.py  test_pure_functions.py  test_session_hooks.py  test_stream_state.py  test_tool_label.py  test_wire.py
probe/: .env.example  .gitignore  README.md  pyproject.toml  sse_server.py
probe/src/byoa_probe/: server.py
