[project]
name = "byoa-bridge"
version = "0.1.0"
description = "Even Realities G2 BYOA bridge server — HTTP chat-completions endpoint for the glasses' built-in Add Agent mode"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "truststore>=0.10.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"
