[project]
name = "byoa-plugin"
version = "0.1.0"
description = "Hermes platform plugin for Even Realities G2 smart glasses"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "numpy>=1.26.0",
    "faster-whisper>=1.2.1",
    "qrcode>=7.4",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "anyio>=4.14.2",
    "protobuf>=7.35.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "basedpyright>=0.10",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/byoa_plugin/proto_gen"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",      # assert is the test mechanism
    "S106",      # test tokens are hardcoded by design
    "PLR2004",   # magic values are test data
    "SLF001",    # tests intentionally access private members
    "ARG001",    # fixtures requested for side effects (reset_env, hermes_home)
    "ARG002",    # test methods take fixture params they may not reference
    "ARG005",    # lambdas in mock stubs often ignore args
    "PLC0415",   # tests use deferred imports so reset_env runs first
    "INP001",    # tests/ is not a package (removed __init__.py for pytest compat with plugin/__init__.py)
    "D100",      # tests don't need module-level docstrings (file docstring is enough)
    "D101",      # TestX classes self-document via name
    "D102",      # test_ methods self-document via name
    "D103",      # test fixtures/helpers self-document via name
    "D105",      # magic methods
    "D107",      # __init__
    "E501",      # test helper signatures can be long
    "SIM117",    # nested async-with is the aiohttp client pattern
]
"src/byoa_plugin/cli.py" = [
    "T201",     # print() is the CLI output mechanism
    "PLC0415",  # lazy imports intentional for optional CLI deps
]
"src/byoa_plugin/qr_setup.py" = [
    "T201",     # print() is the QR display mechanism
]
"src/byoa_plugin/setup_flow.py" = [
    "T201",     # print() for setup instructions
    "PLC0415",  # lazy imports for optional deps
]
"src/byoa_plugin/__init__.py" = [
    "PLC0415",  # lazy imports are the Hermes plugin pattern (deferred adapter/cli)
]
"src/byoa_plugin/log.py" = [
    "ANN401",   # **fields: Any is the structured-logging API by design
    "PLW0603",  # global _CONFIGURED is the standard idempotent-init pattern
]
"src/byoa_plugin/adapter.py" = [
    "PLC0415",  # lazy import of ASR module to avoid pulling torch on plugin load
    "SLF001",   # gateway_runner._handle_message is the adapter wiring pattern
]
"src/byoa_plugin/server.py" = [
    "PLR0912",  # WS dispatch has one branch per frame type — clean
    "PLR0915",  # same: one statement per frame type
    "PLR0911",  # one return per error/edge case + success path
    "TRY300",   # explicit return inside try is clearer than else-after-except
    "PLR2004",  # gzip threshold 512 matches GZipMiddleware default
    "SLF001",   # bound_port accesses _site._server (aiohttp internal)
    "E501",     # match/case branches with long LOG.info lines
]
"src/byoa_plugin/http_endpoints.py" = [
    "PLR0911",   # one return per error/edge case + success path — readable
    "TRY300",    # explicit return inside try is clearer than else-after-except
    "PLR2004",   # gzip threshold 512 matches FastAPI GZipMiddleware default
]
"src/byoa_plugin/debug_client.py" = [
    "T201",      # print is the CLI summary output mechanism
    "D103",      # main() self-documents via argparse
    "D301",      # docstring examples intentionally show literal backslashes
    "EM101",     # inline ValueError messages are fine in a CLI spec parser
    "EM102",     # same as EM101 for f-strings
    "TRY003",    # same as EM101
    "TRY400",    # use error() with explicit str(e) so extra= fields survive
    "FBT001",    # debug bool flag is a CLI primitive
    "ARG001",    # signal handler signature is fixed by the signal API
    "ASYNC109",  # timeout float parameter matches the --timeout CLI flag 1:1
    "TC001",     # _pb import needed at runtime for type in _frame_fields
    "PLR0911",   # one return per recognized frame type + default = clean
    "PLR0913",   # run_client args mirror the CLI flags 1:1
    "PLR0915",   # CLI run loop is necessarily statement-heavy
    "PLC0415",   # lazy imports would be a real cost on every CLI invocation
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "mypy-protobuf>=5.1.0",
]
