[project]
name = "byoa-probe"
version = "0.1.0"
description = "Temporary diagnostic BYOA protocol probe for Even Realities G2 glasses (disposable spike)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "truststore>=0.10.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"
